--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server.js",
     "debug": "nodemon --inspect server.js",
     "test": "truffle test test/*",
-    "coverage": "cross-env NODE_ENV=test nyc truffle test",
+    "coverage": "cross-env NODE_ENV=test nyc truffle test && nyc report --reporter=text-lcov | coveralls",
     "generage-doc": "jsdoc --configure .jsdoc.json --verbose",
     "lint": "eslint devery/**/*.js test/**/*.js",
     "lint:fix": "eslint devery/**/*.js test/**/*.js --fix",
@@ -44,6 +44,7 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
+    "coveralls": "^3.0.2",
     "cross-env": "^5.1.4",
     "css-loader": "^0.26.1",
     "eslint": "^4.19.1",
@@ -57,6 +58,7 @@
     "jsdoc-template-devery": "git+https://github.com/victorrseloy/jsdoc-template-devery.git",
     "json-loader": "^0.5.4",
     "mocha": "^5.1.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^11.7.1",
     "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.11",
