--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generage-doc": "jsdoc --configure .jsdoc.json --verbose",
     "lint": "eslint devery/**/*.js test/**/*.js",
     "lint:fix": "eslint devery/**/*.js test/**/*.js --fix",
-    "lint:watch": "esw devery/**/*.js test/**/*.js --watch"
+    "lint:watch": "esw devery/**/*.js test/**/*.js --watch",
+    "inch":"inchjs suggest devery/"
   },
   "author": "Victor Eloy",
   "license": "MIT",
@@ -70,6 +71,7 @@
     "cross-fetch": "^2.2.2",
     "crypto-js": "^3.1.9-1",
     "ethers": "^3.0.15",
+    "inchjs": "^0.4.1",
     "truffle": "^4.1.14",
     "webpack": "^4.6.0",
     "xmlhttprequest": "^1.8.0"
